@@ -20,8 +20,6 @@
 # ebook: 0
 # outputdir: ./
 # outputfile: [title].epub
-# validate: False
-# notify: False
 # section_tags: [list of classes]
 # packager: None ['ww', 'gzip']
 # cover: None [path]
